--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,8 @@
-<footer class="card-footer bg-light footer-font-style text-muted footer-position footer-margin">
-    <%= link_to "Github Page", :url => "https://github.com/Pangani/main-recipes" %>
+<footer class="footer footer-margin">
+<small>
+    <strong><%= link_to "Github Page", :url => "https://github.com/Pangani/main-recipes" %></strong>
+</small>
+    <ul>
+        <li><%= link_to "About", "#" %></li>
+    </ul>
 </footer>
