--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,10 +18,6 @@ $navbar-default-bg: #6aacf7;
     height: 300px;
 }
 
-.btn-xlarge {
-    background-color: $navbar-default-bg;
-}
-
 #logo.hover {
     color: white;
     text-decoration: none;
@@ -31,14 +27,66 @@ $navbar-default-bg: #6aacf7;
     text-align: center;
 }
 
-.jumbotron h1, h2 {
-    color: #ffffff;
+.footer-margin {
+    height: 100px;
+}
+.jumbotron h1 {
+    color: #fff;
     text-align: center;
     margin-bottom: 30px;
     letter-spacing: -1px;
     font-weight: bold;
-}
-
-.footer-margin {
-    height: 100px;
-}
+  }
+  
+  .jumbotron h2 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: -1px;
+    font-weight: bold;
+  }
+  
+  .btn-xlarge {
+    background-color: #073B15;
+  }
+  
+  .btn-xlarge:hover {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  body {
+    height: 100%;
+  }
+  
+  footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  
+  
+  footer a {
+    color: #555;
+  }
+  
+  footer a:hover {
+    color: #222;
+  }
+  
+  footer small {
+    float: left;
+  }
+  
+  footer ul {
+    float: right;
+    list-style: none;
+  }
+  
+  footer ul li {
+    float: left;
+    margin-left: 15px;
+  }
