--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -90,3 +90,18 @@ $navbar-default-bg: #6aacf7;
     float: left;
     margin-left: 15px;
   }
+
+  .description {
+    margin-top: 0;
+  }
+
+  .well a {
+    color: #073B15; 
+  }
+  .chef_info {
+    margin-top: 10px;
+  }
+
+  .colormatch a{
+    color: #073B15;
+  }
