--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -105,3 +105,10 @@ $navbar-default-bg: #6aacf7;
   .colormatch a{
     color: #073B15;
   }
+
+  .recipe-actions {
+    padding-top: 5px;
+    a {
+      color: #fff;
+    }
+  }
