--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
     <h1>Welcome to Recipes App</h1>
     <h2>The best recipe sharing app!</h2>
     <p>
-        <%= link_to "Sign up or log in", "#", :class => "btn btn-danger btn-xlarge" %> 
+        <%= link_to "Sign up for the app", signup_path, :class => "btn btn-danger btn-xlarge" %> 
     </p>
 </div>
 <div class="row">
